# src/main/java/io/jans/configapi/rest/resource/JwksResource.java
@@ -9,10 +9,12 @@ package io.jans.configapi.rest.resource;
 import com.github.fge.jsonpatch.JsonPatchException;
 import io.jans.as.model.config.Conf;
 import io.jans.as.model.config.WebKeysConfiguration;
+import io.jans.as.model.jwk.JSONWebKeySet;
 import io.jans.as.model.jwk.JSONWebKey;
 import io.jans.configapi.filters.ProtectedApi;
 import io.jans.configapi.service.ConfigurationService;
 import io.jans.configapi.service.KeyStoreService;
+import io.jans.configapi.service.TestKeyGenerator;
 import io.jans.configapi.util.ApiAccessConstants;
 import io.jans.configapi.util.ApiConstants;
 import io.jans.configapi.util.Jackson;
@@ -22,7 +24,7 @@ import javax.ws.rs.*;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import java.io.IOException;
-
+import java.util.List;
 import org.slf4j.Logger;
 
 /**
@@ -32,16 +34,19 @@ import org.slf4j.Logger;
 @Produces(MediaType.APPLICATION_JSON)
 @Consumes(MediaType.APPLICATION_JSON)
 public class JwksResource extends BaseResource {
-    
+
     @Inject
     Logger log;
 
     @Inject
     ConfigurationService configurationService;
-    
+
     @Inject
     KeyStoreService keyStoreService;
-    
+
+    @Inject
+    TestKeyGenerator testKeyGenerator;
+
     @GET
     @ProtectedApi(scopes = { ApiAccessConstants.JWKS_READ_ACCESS })
     public Response get() {
@@ -52,7 +57,7 @@ public class JwksResource extends BaseResource {
     @PUT
     @ProtectedApi(scopes = { ApiAccessConstants.JWKS_WRITE_ACCESS })
     public Response put(WebKeysConfiguration webkeys) {
-        log.debug("JWKS details to be updated - webkeys = "+webkeys);
+        log.debug("JWKS details to be updated - webkeys = " + webkeys);
         final Conf conf = configurationService.findConf();
         conf.setWebKeys(webkeys);
         configurationService.merge(conf);
@@ -64,7 +69,7 @@ public class JwksResource extends BaseResource {
     @Consumes(MediaType.APPLICATION_JSON_PATCH_JSON)
     @ProtectedApi(scopes = { ApiAccessConstants.JWKS_WRITE_ACCESS })
     public Response patch(String requestString) throws JsonPatchException, IOException {
-        log.debug("JWKS details to be patched - requestString = "+requestString);
+        log.debug("JWKS details to be patched - requestString = " + requestString);
         final Conf conf = configurationService.findConf();
         WebKeysConfiguration webKeys = conf.getWebKeys();
         webKeys = Jackson.applyPatch(requestString, webKeys);
@@ -73,18 +78,55 @@ public class JwksResource extends BaseResource {
         final String json = configurationService.findConf().getWebKeys().toString();
         return Response.ok(json).build();
     }
-    
+
+    /*
+     * @POST
+     * 
+     * @ProtectedApi(scopes = { ApiAccessConstants.JWKS_WRITE_ACCESS }) public
+     * Response postKey(JSONWebKey jsonWebKey) throws Exception { log.
+     * debug("JwksResource::postKey() - Json WEb Key to be imported - jsonWebKey = "
+     * +jsonWebKey.toJSONObject().toString());
+     * keyStoreService.importKey(jsonWebKey);
+     * 
+     * //Update add new key to JWKS stored in jansConfWebKeys String jansConfWebKeys
+     * = configurationService.findConf().getWebKeys().toString(); log.
+     * debug("JwksResource::postKey() - existing Json Web Keys - jansConfWebKeys = "
+     * +jansConfWebKeys); final Conf conf = configurationService.findConf();
+     * WebKeysConfiguration webKeys = conf.getWebKeys();
+     * log.debug("JwksResource::postKey() - existing Json Web Keys - webKeys = "
+     * +webKeys); List<JSONWebKey> jsonWebKeyList = webKeys.getKeys(); log.
+     * debug("JwksResource::postKey() - existing Json Web Keys - jsonWebKeyList = "
+     * +jsonWebKeyList); boolean status = jsonWebKeyList.add(jsonWebKey);
+     * log.debug("JwksResource::postKey() - existing Json Web Keys - status = "
+     * +status); webKeys.setKeys(jsonWebKeyList); conf.setWebKeys(webKeys);
+     * configurationService.merge(conf); final String json =
+     * configurationService.findConf().getWebKeys().toString(); return
+     * Response.ok(json).build(); }
+     */
+
     @POST
     @ProtectedApi(scopes = { ApiAccessConstants.JWKS_WRITE_ACCESS })
-    //public Response postKey(JSONWebKey jsonWebKey) throws Exception {
-    public Response postKey(WebKeysConfiguration webkeys) throws Exception {
-        System.out.println("JwksResource::postKey() - JWKS details to be updated - webkeys = "+webkeys);
-        log.debug("JwksResource::postKey() - JWKS details to be updated - webkeys = "+webkeys);
-        keyStoreService.importKey(webkeys.getKeys().get(0));
-        //keystoreService.importKey(jsonWebKey);
+    public Response postKey(String key) throws Exception {
+        System.out.println("JwksResource::postKey() - Json WEb Key to be imported - key = " + key);
+        log.debug("JwksResource::postKey() - Json WEb Key to be imported - key = " + key);
+        keyStoreService.importKey(testKeyGenerator.getPublicKey());
         return Response.ok(Response.Status.OK).build();
+        /*
+         * //Update add new key to JWKS stored in jansConfWebKeys String jansConfWebKeys
+         * = configurationService.findConf().getWebKeys().toString(); log.
+         * debug("JwksResource::postKey() - existing Json Web Keys - jansConfWebKeys = "
+         * +jansConfWebKeys); final Conf conf = configurationService.findConf();
+         * WebKeysConfiguration webKeys = conf.getWebKeys();
+         * log.debug("JwksResource::postKey() - existing Json Web Keys - webKeys = "
+         * +webKeys); List<JSONWebKey> jsonWebKeyList = webKeys.getKeys(); log.
+         * debug("JwksResource::postKey() - existing Json Web Keys - jsonWebKeyList = "
+         * +jsonWebKeyList); boolean status = jsonWebKeyList.add(jsonWebKey);
+         * log.debug("JwksResource::postKey() - existing Json Web Keys - status = "
+         * +status); webKeys.setKeys(jsonWebKeyList); conf.setWebKeys(webKeys);
+         * configurationService.merge(conf); final String json =
+         * configurationService.findConf().getWebKeys().toString(); return
+         * Response.ok(json).build();
+         */
     }
-        
-        
-    
+
 }
